<resources>
    <string name="app_name">Crypto Currency App</string>
    <string name="meus_favoritos">Meus favoritos</string>
    <string name="moedas">Moedas</string>
    <string name="moeda_digital">Moeda Digital</string>
    <string name="btc">BTC</string>
    <string name="_31_010_20">$31.010.20</string>
    <string name="adicionar">ADICIONAR</string>
    <string name="remover">REMOVER</string>
    <string name="voltar">voltar</string>
    <string name="ultima_hora">ultima hora</string>
    <string name="ultimo_dia">ultimo dia</string>
    <string name="ultimo_mes">ultimo mês</string>
    <string name="_123_456_78">$ 123.456.78</string>
    <string name="volumes_negociados">volumes negociados</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="escrita_da_moeda_bitcoin_do_item_favorite_screen">escrita da moeda bitcoin do item favorite screen</string>
    <string name="valor_do_item_favorite_screen">valor do item favorite screen</string>
    <string name="_23_mai_2022">23 Mai 2022</string>
    <string name="search">Search</string>
    <string name="icon_da_moeda_da_tela_item_coin">icon da moeda da tela item coin</string>
    <string name="icon_da_moeda_do_item_favorite">icon da moeda do item favorite</string>
    <string name="item_para_uso_de_fundo_do_item_favorite_screen">item para uso de fundo do item favorite screen</string>
    <string name="nome_completo_da_moeda_da_tela_item_coin">nome completo da moeda da tela item coin</string>
    <string name="estrela_dos_favoritos_da_tela_item_coin">Estrela dos favoritos da tela item coin</string>
    <string name="cifr_o_da_moeda_da_tela_item_coin">cifrão da moeda da tela item coin</string>
    <string name="valor_do_item_da_tela_item_coin">valor do item da tela item coin</string>
    <string name="titulo_principal_da_splash_screen">titulo principal da splash screen</string>
    <string name="abrevi_o_o_do_nome_da_moeda_da_tela_item_coin">abrevição o do nome da moeda da tela item coin</string>
    <string name="constraint_de_cima_da_tela_fragment_details">constraint de cima da tela fragment details</string>
    <string name="icon_da_moeda_da_tela_fragment_details">icon da moeda da tela fragment details</string>
    <string name="valor_real_da_tela_fragment_details">valor real da tela fragment details</string>
    <string name="button_adicionar_da_tela_fragment_details">button adicionar da tela fragment details</string>
    <string name="button_voltar_da_tela_fragment_details">button voltar da tela fragment details</string>
    <string name="estrela_favoritos_da_tela_fragment_details">estrela favoritos da tela fragment details</string>
    <string name="constraint_de_baixo_da_tela_fragment_details">constraint de baixo da tela fragment_details</string>
    <string name="titulo_volume_negociados_da_tela_fragment_details">titulo volume negociados da_tela fragment details</string>
    <string name="sub_titulo_ultima_hora_da_tela_fragment_details">sub titulo ultima hora da tela fragment details</string>
    <string name="sub_titulo_ultimo_m_s_da_tela_fragment_details">sub titulo ultimo mês da tela fragment_details</string>
    <string name="sub_titulo_ultimo_ano_da_tela_fragment_details">sub titulo ultimo ano da tela fragment details</string>
    <string name="valor_da_ultima_hora_da_tela_fragment_details">valor da ultima hora da tela fragment details</string>
    <string name="valor_da_ultimo_m_s_da_tela_fragment_details">valor da ultimo mês da tela fragment details</string>
    <string name="valor_da_ultimo_ano_da_tela_fragment_details">valor da ultimo ano da tela fragment details</string>
    <string name="algo_inesperado_aconteceu_tentar_novamente">Algo inesperado aconteceu! Tentar novamente?</string>
</resources>