<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_titulo"
        android:layout_width="match_parent"
        android:layout_height="366dp"
        android:background="@color/app_yellow_background">

        <TextView
            android:id="@+id/icon_asset_id_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/btc" />

        <ImageView
            android:id="@+id/coin_icon_imageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_coin_base"
            app:layout_constraintEnd_toEndOf="@+id/icon_asset_id_textView"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/icon_asset_id_textView"
            app:layout_constraintTop_toBottomOf="@+id/icon_asset_id_textView" />

        <TextView
            android:id="@+id/price_usd_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="4dp"
            android:drawableStart="@drawable/ic_baseline_attach_coin_24"
            android:gravity="center"
            android:maxLines="1"
            android:ems="5"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/icon_asset_id_textView"
            app:layout_constraintStart_toStartOf="@+id/icon_asset_id_textView"
            app:layout_constraintTop_toBottomOf="@+id/coin_icon_imageView"
            tools:text="@string/_31_010_20" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_button"
            android:layout_width="300dp"
            android:layout_height="59dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/outlined_button"
            android:fontFamily="@font/roboto"
            android:text="@string/adicionar"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_usd_textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_press_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_baseline_chevron_left_24"
            android:fontFamily="@font/roboto"
            android:paddingEnd="8dp"
            android:text="@string/voltar"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/icon_asset_id_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/star_icon_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_coin_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/coin_icon_imageView"
            app:layout_constraintEnd_toEndOf="@+id/add_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/icon_asset_id_textView"
            app:layout_constraintTop_toBottomOf="@+id/icon_asset_id_textView"
            app:layout_constraintVertical_bias="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="366dp"
        android:background="@color/black">

        <TextView
            android:id="@+id/traded_volumes_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/volumes_negociados"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ultima_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ultima_hora"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/last_hour_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/last_hour_textView" />

        <TextView
            android:id="@+id/ultimo_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ultimo_dia"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/ultima_hora"
            app:layout_constraintTop_toBottomOf="@+id/ultima_hora" />

        <TextView
            android:id="@+id/ultimo_mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/ultimo_mes"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/ultimo_dia"
            app:layout_constraintTop_toBottomOf="@+id/ultimo_dia" />

        <TextView
            android:id="@+id/last_hour_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/ic_baseline_attach_coin_24"
            android:ems="4"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/traded_volumes_textView"
            tools:text="@string/_123_456_78" />

        <TextView
            android:id="@+id/last_month_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/ic_baseline_attach_coin_24"
            android:ems="4"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_hour_textView"
            tools:text="@string/_123_456_78" />

        <TextView
            android:id="@+id/last_year_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/ic_baseline_attach_coin_24"
            android:ems="4"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_month_textView"
            tools:text="@string/_123_456_78" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

