<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_black_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/digital_coin_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_black_background"
            android:contentDescription="@string/item_moeda_da_tela_Item_coin"
            android:padding="8dp">

            <ImageView
                android:id="@+id/coin_icon_imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/icon_da_moeda_da_tela_item_coin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_coin_base" />

            <ProgressBar
                android:id="@+id/pbLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:fromDegrees="0"
                android:indeterminateTint="@color/white"
                android:toDegrees="1080"
                app:layout_constraintBottom_toBottomOf="@+id/coin_icon_imageView"
                app:layout_constraintEnd_toEndOf="@+id/coin_icon_imageView"
                app:layout_constraintStart_toStartOf="@+id/coin_icon_imageView"
                app:layout_constraintTop_toTopOf="@+id/coin_icon_imageView" />

            <TextView
                android:id="@+id/coin_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/nome_completo_da_moeda_da_tela_item_coin"
                android:ems="5"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/coin_icon_imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Moeda Digital" />

            <TextView
                android:id="@+id/coin_asset_id_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/abrevi_o_o_do_nome_da_moeda_da_tela_item_coin"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/coin_name_textView"
                app:layout_constraintTop_toBottomOf="@+id/coin_name_textView"
                app:layout_constraintVertical_bias="0.0"
                tools:text="MD" />

            <ImageView
                android:id="@+id/favorite_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/estrela_dos_favoritos_da_tela_item_coin"
                android:src="@drawable/ic_baseline_star_coin_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/coin_name_textView"
                app:layout_constraintStart_toEndOf="@+id/coin_name_textView"
                app:layout_constraintTop_toTopOf="@+id/coin_name_textView" />


            <TextView
                android:id="@+id/price_usd_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/valor_do_item_da_tela_item_coin"
                android:drawableStart="@drawable/ic_baseline_attach_coin_24"
                android:ems="5"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="31.010.20" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>